--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -258,12 +258,12 @@
                   <p>  Availabe stocks</p>
                 </a>
               </li>
-              <li class="nav-item">
+              {# <li class="nav-item">
                 <a href="{{ path('balance') }}" class="nav-link">
                   <i class="far fa-circle nav-icon"></i>
                   <p>Balance</p>
                 </a>
-              </li>
+              </li> #}
               <li class="nav-item">
                 <a href="{{ path('transfer_index') }}" class="nav-link">
                   <i class="far fa-circle nav-icon"></i>
