--- a/templates/stock/index.html.twig
+++ b/templates/stock/index.html.twig
@@ -201,7 +201,7 @@
 
 
 													<td>{{ countDelivered  }}</td>
-													<td>{{ countDelivered - countRequested }}</td>
+													<td>{{ stock.quantity  - countDelivered  }}</td>
 													<td>{{ countRequested }}</td>
 													<td>
 
