--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -24,11 +24,12 @@
 		href="{{asset('assets/plugins/fontface/OpenSans.css')}}" rel="stylesheet">
 		<!-- Google Font: Source Sans Pro -->
 	</head>
-	<body class="hold-transition login-page">
+	<body class="hold-transition login-page" style="background-color:#007bff; border: 1px solid green;">
+
 	{% block fullbody %}
 		<div class="login-box">
 			<div class="login-logo">
-				<a href="/login">
+				<a href="/login" style="color:white">
 					<b>BHU Inventory</b>
 					  Management System</a>
 			</div>
