--- a/templates/product/_form.html.twig
+++ b/templates/product/_form.html.twig
@@ -36,6 +36,12 @@
               {{ form_widget(form.description,{'attr':{'class':'form-control'}}) }}
             <div class="help-block with-errors"></div>
           </div>
+
+          <div class="form-group">
+            <label class="col-sm-5 control-label no-padding-right">{{ form_label(form.canTransfered) }}</label>
+              {{ form_widget(form.canTransfered,{'attr':{'class':'form-control'}}) }}
+            <div class="help-block with-errors"></div>
+          </div>
   
     {% if not button_label is defined  %}
 			<button class="btn btn-info">{{ button_label|default('Save') }}</button>
